WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51328
REGRESSION: body { height:100% } is clipped when printed
https://bugs.webkit.org/show_bug.cgi?id=51328
Summary
REGRESSION: body { height:100% } is clipped when printed
Shinichiro Hamaji
Reported
2010-12-20 04:55:15 PST
Recent WebKit nightly outputs only 1 page for the following HTML: <html> <head> <style> body{ height:100%; } </style> </head> <body> <div style="width: 50px; height: 1500px; border: solid 1px"></div> <div>This must be printed</div> </body> </html> I binary-searched and I think the patch for
Bug 49220
caused this regression. The change is big so I didn't look into the change yet. It is very nice if Hyatt gives some comments on this bug or even fixes this by himself :)
Attachments
Patch
(6.13 KB, patch)
2011-01-03 10:49 PST
,
Dave Hyatt
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2011-01-03 10:49:41 PST
Created
attachment 77825
[details]
Patch
Dave Hyatt
Comment 2
2011-01-03 10:55:16 PST
Fixed in
r74908
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug